--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,41 @@
-node_modules
+##------------------------------------------------##
+##            Ignore .DS_store file               ##
+##------------------------------------------------##
+.DS_Store
+
+
+##------------------------------------------------##
+##                 Ignore NPM                     ##
+##------------------------------------------------##
+/node_modules
+npm-debug.log
+
+
+##------------------------------------------------##
+##           Ignore the build files               ##
+##------------------------------------------------##
+/build
+
+
+##------------------------------------------------##
+##        Ignore cache directory content...       ##
+##------------------------------------------------##
+/.tmp/*
+
+
+##------------------------------------------------##
+##      ...but keep the actual directories        ##
+##------------------------------------------------##
+!*/.gitkeep
+
+##------------------------------------------------##
+##   Ignore directories for self-documentation    ##
+##------------------------------------------------##
+/doc
+/coverage
+
+
+##------------------------------------------------##
+##       Ignore the .env Environment file         ##
+##------------------------------------------------##
+.env
