--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-unicode-property-regex": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "babel-jest": "^24.8.0",
     "eslint": "^6.0.1",
