--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "watch": "jest --watch",
     "lint": "eslint --fix --ext .js, .vue src/vue",
-    "grammar": "onchange -i 'parsers/*.ne' -- nearleyc parsers/date_parser.ne -o parsers/date_parser.js",
+    "grammar": "onchange -i 'parsers/*.ne' -- ./bin/update_nearley.sh",
     "railroad": "nearley-railroad parsers/date_parser.ne -o railroad.html"
   },
   "author": "David Newbury",
