--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "jest",
     "watch": "jest --watch",
     "lint": "eslint --fix --ext .js, .vue src/vue",
-    "grammar": "onchange -i 'parsers/*.ne' -- ./bin/update_nearley.sh",
-    "railroad": "nearley-railroad parsers/date_parser.ne -o railroad.html"
+    "grammar": "onchange -i 'grammars/*.ne' -- ./bin/update_nearley.sh",
+    "railroad": "nearley-railroad grammars/date_parser.ne -o railroad.html"
   },
   "author": "David Newbury",
   "license": "MIT",
