added basic export, beginning prep for publish

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ npm-debug.log
 ##------------------------------------------------##
 /doc
 /coverage
+railroad.html
 
 
 ##------------------------------------------------##
