trying to make this a module

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "David Newbury",
   "license": "MIT",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "jest",
     "watch": "jest --watch --coverage --notify",
@@ -28,6 +29,7 @@
   },
   "dependencies": {
     "edtf": "^2.7.1",
-    "nearley": "^2.19.2"
+    "nearley": "^2.19.2",
+    "np": "^6.2.2"
   }
 }
